fix: ajustar z-index do botão de tema para garantir visibilidade feat: atualizar mensagem da página 404 para incluir sugestões de receitas

--- a/src/app/not-found.module.scss
+++ b/src/app/not-found.module.scss
@@ -20,15 +20,7 @@
 }
 
 .illustration {
-  width: 280px;
-  max-width: 80vw;
   margin: 0 auto 0.25rem;
-
-  img {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
 }
 
 .code {
