--- a/src/components/ThemeToggle/ThemeToggle.module.scss
+++ b/src/components/ThemeToggle/ThemeToggle.module.scss
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 1.5rem;
   right: 1.5rem;
-  z-index: 100;
+  z-index: 9999;
   background: none;
   border: none;
   cursor: pointer;
